syntax = "proto3";
package auth;

option go_package = "github.com/Dev-Siri/sero/proto/auth;authpb";

import "google/protobuf/empty.proto";

service AuthService {
  rpc CreateSession(SessionRequest) returns (SessionResponse);
  rpc VerifyOtp(OtpRequest) returns (OtpResponse);
  rpc CompleteAuth(CompleteAuthRequest) returns (AuthResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (google.protobuf.Empty);
}

message SessionResponse {
  string session_id = 1;
}

message SessionRequest {
  string phone = 1;
}

message OtpRequest {
  string session_id = 1;
  string otp = 2;
}

message OtpResponse {
  enum OtpValidityStatus {
    INVALID_OTP = 0;
    VALID_OTP = 1;
    EXPIRED_OTP = 2;
  }

  OtpValidityStatus otp_validity_status = 1;
}

message CompleteAuthRequest {
  string session_id = 1;
  string phone = 2;
}

message AuthResponse {
  enum AuthType {
    NEW_USER = 0;
    EXISTING_USER = 1;
  }

  AuthType auth_type = 1;
  string user_id = 2;
  string token = 3;
}

message UpdateProfileRequest {
  string user_id = 1;
  string name = 2;
  string email = 3;
}
